# cgn-ec-producer-syslog

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  render_config.py  requirements.txt  syslog.yaml
.github/workflows/: ci.yml
templates/: address_mapping.j2  base_config.j2  default_mapping.j2  port_block_mapping.j2  port_mapping.j2  session_mapping.j2
